# Nanopb_Serial

./: .gitmodules  CMakeLists.txt  LedBlinkerThread.hpp  Makefile  PidParam.proto  README.md  halconf.h  main.cpp  main_someother  mcuconf.h  messages.proto  nanopb_build.mk  nanopb_include.mk
Scripts/: Nanopb_receive.py
proto/: messages.options  messages.pb.c  messages.pb.h  messages.proto  messages.py
